@@ -723,6 +723,8 @@ class UpdateCommand(ConaryCommand):
         'from-file'     : 'search changeset(s) for given troves',
         'just-db'       : 'Update db only - Do not modify rest of file system',
         'keep-existing' : 'Install new troves as new, leaving existing troves.',
+        'keep-required' : 'Do not erase troves which are needed by troves '
+                          'which will remain installed',
         'info'          : 'Display what update would have done',
         'no-deps'       : 'Do not raise errors due to dependency failures',
         'no-recurse'    : 'Do not install/erase children of specified trove',
@@ -743,6 +745,7 @@ class UpdateCommand(ConaryCommand):
         d["from-file"] = MULT_PARAM
         d["just-db"] = NO_PARAM
         d["keep-existing"] = NO_PARAM
+        d["keep-required"] = NO_PARAM
         d["info"] = NO_PARAM
         d["no-deps"] = NO_PARAM
         d["no-recurse"] = NO_PARAM
@@ -786,6 +789,7 @@ class UpdateCommand(ConaryCommand):
         kwargs['justDatabase'] = argSet.pop('just-db', False)
         kwargs['info'] = argSet.pop('info', False)
         kwargs['keepExisting'] = argSet.pop('keep-existing', False)
+        kwargs['keepRequired'] = argSet.pop('keep-required', False)
         kwargs['tagScript'] = argSet.pop('tag-script', None)
         kwargs['test'] = argSet.pop('test', False)
         kwargs['sync'] = argSet.pop('sync-to-parents', False)
